feat(Delete-File-Route-Working): delete route for files are working in s3
